--- a/triangleS3.html
+++ b/triangleS3.html
@@ -148,7 +148,7 @@
             <td><img src="images/trianglenum.png" class="picmove5" /></td>
         </tr>
     </table>
-    <p>The table below is the conclusion.</p>
+    <p>The table below concludes all possible motions.</p>
     <table class="borderparagraph">
         <tr>
             <td> e </td>
