--- a/triangleS3_TH.html
+++ b/triangleS3_TH.html
@@ -136,8 +136,8 @@
 </head>
 <body>
     <h2>กรุป S<sub>3</sub></h2>
-    <p>S<sub>3</sub> เป็นกรุปสมมาตรของ {1,2,3}.</p>
-    <p><b>คำชี้แจง:</b> วางเคอร์เซอร์บนสามเหลี่ยมแต่ละรูปเพื่อดูการเคลื่อนไหว</p>
+    <p>S<sub>3</sub> เป็นกรุปสมมาตรของ {1,2,3}</p>
+    <p><b>คำชี้แจง:</b> วางเคอร์เซอร์บนสามเหลี่ยมแต่ละรูปเพื่อดูการเคลื่อนไหวของรูปนั้น</p>
     <table>
         <tr>
             <td><img src="images/trianglenum.png" class="picmove0" /></td>
@@ -148,7 +148,7 @@
             <td><img src="images/trianglenum.png" class="picmove5" /></td>
         </tr>
     </table>
-    <p>ตารางข้างล่างนี้เป็นการสรุป</p>
+    <p>ตารางข้างล่างนี้เป็นการสรุปการเคลื่อนไหวทั้งหมดที่เป็นไปได้</p>
     <table class="borderparagraph">
         <tr>
             <td> e </td>
@@ -178,10 +178,10 @@
     <p>
         ความหมายของการแปลงแต่ละตัว:
         <ul>
-            <li> e คือเอกลักษณ์ ซึ่งไม่มีจุดใดเคลื่อนที่ </li>
-            <li> r คือการหมุน 120 องศา ในทิศทวนเข็มนาฬิกา (รอบจุดศูนย์กลาง). </li>
-            <li> r<sup>2</sup> คือ r ตามด้วย r ซึ่งกลายเป็นการหมุน 240 องศา ในทิศทวนเข็มนาฬิกา ซึ่งก็จะเทียบได้กับการหมุน 120 องศาในทิศตามเข็มนาฬิกา </li>
-            <li> s คือการสะท้อนรอบแกนตั้ง </li>
+            <li> e คือ เอกลักษณ์ ซึ่งไม่มีจุดใดเคลื่อนที่ </li>
+            <li> r คือ การหมุน 120 องศาในทิศทวนเข็มนาฬิกา (รอบจุดศูนย์กลาง) </li>
+            <li> r<sup>2</sup> คือ r ตามด้วย r ซึ่งกลายเป็นการหมุน 240 องศาในทิศทวนเข็มนาฬิกา ซึ่งก็จะเทียบได้กับการหมุน 120 องศาในทิศตามเข็มนาฬิกา </li>
+            <li> s คือ การสะท้อนรอบแกนตั้ง </li>
             <li> sr คือ r ตามด้วย s</li>
             <li> sr<sup>2</sup> คือ r<sup>2</sup> ตามด้วย s </li>
         </ul>
@@ -194,7 +194,7 @@
             <li> จุดที่อยู่ในตำแหน่งหมายเลข \(3\) เคลื่อนไปอยู่ในตำแหน่งหมายเลข \(a_3\) </li>
         </ul>
     </p>
-    <p><b>หมายเหตุ:</b> สมาชิกบางตัวของ S<sub>3</sub> สามารถมองได้มากกว่าหนึ่งแบบ ลองวางเคอร์เซอร์บนสามเหลี่ยมแต่ละรูปเพื่อดูการเคลื่อนไหว</p>
+    <p><b>เพิ่มเติม:</b> สมาชิกบางตัวของ S<sub>3</sub> สามารถมองได้มากกว่าหนึ่งแบบ ให้วางเคอร์เซอร์บนสามเหลี่ยมแต่ละรูปเพื่อดูการเคลื่อนไหว</p>
     <table class="borderparagraph", rules="rows">
         <tr>
             <td>r<sup>2</sup> = \( \begin{pmatrix} 1 & 2 & 3 \\ 3 & 1 & 2 \end{pmatrix} \) สามารถมองได้เป็น </td>
