--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </title>
 </head>
 <body>
+    <h2>Welcome</h2>
+    <!-- The following items are my current resources. -->
     <p>
         The symmetric group S<sub>3</sub> (<a href="triangleS3.html">English</a>) (<a href="triangleS3_TH.html">ภาษาไทย</a>)
     </p>
