--- a/triangleS3_TH.html
+++ b/triangleS3_TH.html
@@ -215,5 +215,6 @@
             <td><img src="images/trianglenum.png" class="picmove5prime" /></td>
         </tr>
     </table>
+    <p><a href="index.html" style="color:blue">< Back</a></p>
 </body>
 </html>
