--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Welcome</h2>
     <!-- The following items are my current resources. -->
     <p>
-        The symmetric group S<sub>3</sub> (<a href="triangleS3.html" style="color:blue">English</a>) (<a href="triangleS3_TH.html" style="color:blue">ภาษาไทย</a>)
+        The symmetric group S<sub>3</sub> (<a href="triangleS3/triangleS3_EN.html" style="color:blue">English</a>) (<a href="triangleS3/triangleS3_TH.html" style="color:blue">ภาษาไทย</a>)
     </p>
 </body>
 </html>
