--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     </title>
 </head>
 <body>
-    <h2>Welcome</h2>
-    <!-- The following items are my current resources. -->
+    <h2>Welcome to my homepage</h2>
+    <h3>Nattapon Sonpanow / ณัฐพล สนพะเนาว์</h3>
     <p>
-        The symmetric group S<sub>3</sub> (<a href="triangleS3/triangleS3_EN.html" style="color:blue">English</a>) / กรุปสมมาตร S<sub>3</sub> (<a href="triangleS3/triangleS3_TH.html" style="color:blue">ภาษาไทย</a>)
+        Department of Mathematics and Computer Science, <br> Faculty of Science, Chulalongkorn University <br> Bangkok, Thailand
+    </p>
+
+    <!-- The following items are my current resources. -->
+    
+    <p>
+        Disclaimer: The following documents and webpages are not good enough to be references. Please use them just as some guidance. <br>
+        <!-- คำออกตัว: เอกสารต่อไปนี้ไม่ได้สมบูรณ์เพียงพอที่จะใช้อ้างอิง กรุณาใช้เพียงเพื่อเป็นแนวทางสำหรับเรื่องที่เกี่ยวข้อง -->
+    </p>
+
+    <h3> Documents </h3>
+    <p> ... coming soon ... </p>
+
+    <h3> Webpages </h3>
+    <p>
+        The symmetric group S<sub>3</sub> (<a href="triangleS3/triangleS3_EN.html" style="color:blue">click</a>) / กรุปสมมาตร S<sub>3</sub> (<a href="triangleS3/triangleS3_TH.html" style="color:blue">คลิก</a>)
     </p>
 </body>
 </html>
