--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     </title>
 </head>
 <body>
-    <h2>Welcome to my homepage</h2>
-    <h3>Nattapon Sonpanow / ณัฐพล สนพะเนาว์</h3>
-    <p>
-        Department of Mathematics and Computer Science, <br> Faculty of Science, Chulalongkorn University <br> Bangkok, Thailand
-    </p>
-
-    <!-- The following items are my current resources. -->
+    <div>
+        <h2>Welcome to my homepage</h2>
+        <h3>Nattapon Sonpanow / ณัฐพล สนพะเนาว์</h3>
+        <!-- <p>Mathematics lecturer</p> -->
+        <!-- <p>
+            Department of Mathematics and Computer Science, <br> Faculty of Science, Chulalongkorn University <br> Bangkok, Thailand
+        </p> -->
+    </div>
     
     <p>
         Disclaimer: The following documents and webpages are not good enough to be references. Please use them just as some guidance. <br>
