--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <p>
         Disclaimer: The following documents and webpages are not good enough to be references. Please use them just as some guidance. <br>
-        <!-- คำออกตัว: เอกสารต่อไปนี้ไม่ได้สมบูรณ์เพียงพอที่จะใช้อ้างอิง กรุณาใช้เพียงเพื่อเป็นแนวทางสำหรับเรื่องที่เกี่ยวข้อง -->
+        ข้อควรทราบ: เอกสารต่อไปนี้ไม่ได้สมบูรณ์เพียงพอที่จะใช้อ้างอิง กรุณาใช้เพียงเพื่อเป็นแนวทางสำหรับเรื่องที่เกี่ยวข้อง <br>
     </p>
 
     <h3> Documents </h3>
