--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         </p> -->
     </div>
     
-    <p>
-        Disclaimer: The following documents and webpages are not good enough to be references. Please use them just as some guidance. <br>
-        ข้อควรทราบ: เอกสารต่อไปนี้ไม่ได้สมบูรณ์เพียงพอที่จะใช้อ้างอิง กรุณาใช้เพียงเพื่อเป็นแนวทางสำหรับเรื่องที่เกี่ยวข้อง <br>
-    </p>
+    <div>
+        <p>
+            Disclaimer: The following documents and webpages are not good enough to be references. Please use them just as some guidance.
+        </p>
+        <p>
+            ข้อควรทราบ: เอกสารต่อไปนี้ไม่ได้สมบูรณ์เพียงพอที่จะใช้อ้างอิง กรุณาใช้เพียงเพื่อเป็นแนวทางสำหรับเรื่องที่เกี่ยวข้อง <br>
+        </p>
+    </div>
 
     <h3> Documents </h3>
     <p> ... coming soon ... </p>
